implement support for changin organisaatio structure